# sharenv

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  requirements.dev.txt
scripts/: build.sh
src/sharenv/: __init__.py  __main__.py
